--- a/metadata.yaml
+++ b/metadata.yaml
@@ -18,6 +18,7 @@ doc_title: "Catcher design"
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
   - "Tiago Ribeiro"
+  - "Angelo Fausti"
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
